# extract-tex-env

./: pyproject.toml
extract_tex_env/: __main__.py  main.py
