[tool.poetry]
name = "extract-tex-env"
version = "0.1.0"
description = "A cli tool for extracting tex environment from a tex file."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "extract_tex_env"}]


[tool.poetry.scripts]
extract-tex-env = "extract_tex_env.main:main"


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
