[tool.poetry]
name = "extract-tex-env"
version = "0.1.1"
description = "Turned on to show default values."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
packages = [{include = "extract_tex_env"}]


[tool.poetry.scripts]
extract-tex-env = "extract_tex_env.main:main"


[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
